--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -1,9 +1,9 @@
 name: eShopOnWeb Build and Test
 
-Triggers (uncomment line below to use it)
+#Triggers (uncomment line below to use it)
+on: [push, workflow_dispatch]
 
-
-Environment variables https://docs.github.com/en/actions/learn-github-actions/environment-variables
+#Environment variables https://docs.github.com/en/actions/learn-github-actions/environment-variables
 env:
   RESOURCE-GROUP: rg-az400-eshoponweb-NAME
   LOCATION: westeurope
@@ -13,13 +13,13 @@ env:
 
 
 jobs:
-  Build, test and publish .net web project in repository
+  #Build, test and publish .net web project in repository
   buildandtest:
     runs-on: ubuntu-latest
     steps:
-    checkout the repository
+    #checkout the repository
     - uses: actions/checkout@v2
-    prepare runner for desired .net version SDK
+    #prepare runner for desired .net version SDK
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
@@ -32,21 +32,21 @@ jobs:
       run: dotnet test ./eShopOnWeb.sln --configuration Release
     - name: dotnet publish
       run: dotnet publish ./src/Web/Web.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
-    upload the published website code artifacts
+    # upload the published website code artifacts
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v3
       with:
         name: .net-app
         path: ${{env.DOTNET_ROOT}}/myapp
         
-    upload the bicep template as artifacts for next job
+    # upload the bicep template as artifacts for next job
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v3
       with:
         name: bicep-template
         path: ${{ env.TEMPLATE-FILE }}
         
-  Use Bicep to deploy infrastructure + Publish webapp 
+  # Use Bicep to deploy infrastructure + Publish webapp 
   deploy:
     runs-on: ubuntu-latest
     needs: buildandtest
@@ -61,20 +61,20 @@ jobs:
         name: .net-app
         path: .net-app
   
-    Download the bicep templates from previous job
+    #Download the bicep templates from previous job
     - name: Download artifact from build job
       uses: actions/download-artifact@v3
       with:
         name: bicep-template
         path: bicep-template
         
-   Login in your azure subscription using a service principal (credentials stored as GitHub Secret in repo)
+   #Login in your azure subscription using a service principal (credentials stored as GitHub Secret in repo)
     - name: Azure Login
       uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
            
-    Deploy Azure WebApp using Bicep file
+    # Deploy Azure WebApp using Bicep file
     - name: deploy
       uses: azure/arm-deploy@v1
       with:
@@ -84,10 +84,9 @@ jobs:
         parameters: 'webAppName=${{ env.WEBAPP-NAME }} location=${{ env.LOCATION }}'
         failOnStdErr: false   
     
-    Publish website to Azure App Service (WebApp)
+    # Publish website to Azure App Service (WebApp)
     - name: Publish Website to WebApp
       uses: Azure/webapps-deploy@v2
       with:
         app-name: ${{ env.WEBAPP-NAME  }}
         package: .net-app
-   
